<resources>
    <string name="app_name">Grocery Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_offer">Offer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_new_product">New Products</string>
    <string name="menu_order">Orders</string>
    <string name="menu_cart">Cart</string>
    <string name="title_activity_view_all">ViewAllActivity</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
</resources>