<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gamecommerce.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.gamecommerce.fragment.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.gamecommerce.fragment.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_offer"
        android:name="com.example.gamecommerce.OfferFragment"
        android:label="@string/menu_offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_new_product"
        android:name="com.example.gamecommerce.NewProductFragment"
        android:label="@string/menu_new_product"
        tools:layout="@layout/fragment_new_product" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.gamecommerce.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.gamecommerce.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

</navigation>